# music-metadata

./: .editorconfig  .gitignore  Cargo.toml  Readme.md  analysis
examples/: flac_example.rs  runme.rs
src/: extended_header.rs  footer.rs  id3v1_tag.rs  lib.rs  main.rs  parser.rs  protocol_header.rs  reader.rs  util.rs  version.rs
src/error/: frame_error.rs  header_error.rs  mod.rs
src/flac/: block_application.rs  block_header.rs  block_picture.rs  block_seektable.rs  block_stream_info.rs  block_vorbis_comment.rs  core.rs  error.rs  flac_buffer_reader.rs  header.rs  mod.rs  stream_info.rs
src/flac/blocks/: block_application.rs  block_cue_sheet.rs  block_header.rs  block_picture.rs  block_seektable.rs  block_stream_info.rs  block_vorbis_comment.rs  mod.rs
src/frames/: APIC.rs  COMM.rs  SYLT.rs  TXXX.rs  USLT.rs  WXXX.rs  common.rs  header.rs  identifiers.rs  rarely_used.rs  text_infomation_frame.rs  url_link_frame.rs
src/id3/: common.rs  core.rs  error.rs  extended_header.rs  footer.rs  id3_buffer_reader.rs  mod.rs  protocol_header.rs  version.rs
src/id3/error/: mod.rs
src/id3/frames/: APIC.rs  COMM.rs  SYLT.rs  TXXX.rs  common.rs  header.rs  identifiers.rs  mod.rs  rarely_used.rs  text_infomation_frame.rs  url_link_frame.rs
src/ogg/: mod.rs  ogg_buffer_reader.rs  ogg_vorbis_comment.rs  page.rs
