[package]
name = "music-metadata"
version = "0.3.0"
edition = "2021"
description = "A parser for .mp3, .flac, and .ogg"
keywords = ["id3v2", "id3v1", "id3", "mp3-metadata"]
authors = ["ptrzs <ptrzsi386@outlook.com>"]
license = "Apache-2.0"
documentation = "https://docs.rs/music-metadata/latest/music_metadata/"
homepage = "https://github.com/ptrzs3/music-metadata#readme"
repository = "https://github.com/ptrzs3/music-metadata"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
